quizzes/d.s exam/v_1/v_1.txt
שאלה 1ץ1 : לא עניתי כי לא הבנתי שנידרש משהו שונה, מסתבר שמיממשתי משהו אחר ולא FSA בסעיף 3 של השאלה
שאלה 1.2
free מתקמפל ללא הערות ועובר טסטים 

שאלה 1.2
ALLOC לא מתקמפל ולא עובר טסטים !



שאלה 1.3 ALLOC ו-FREE - מתקמפל ללא הערות וטעויות קומפילציה -
 לא בדקתי בALLOC אם נותר מקום להקצאת !!! בעיה גדולה ! לא עובר טסטים - מימוש שונה אבל לא כמו הFSA המקורי!!
עושה segmentation falut-יכול להיות בגלל המימוש השונה, העמיק בהבדל לאחר שאסיים לעבור על כל המבחן..

שאלה 2 אין בעיות קומפילציה -עובר טסטים 

שאלה 3.2A:מתקמפל ללא הערות ועובר טסטים !!

שאלה 3.2B:מתקמפל ללא הערות ועובר טסטים !!

שאלה 3.3A:טעות עוד לפני קומפילציה בגלל הבלאגן במבחן לא שמתי כמה שורות במקום נכון בקובץ יש אותם בהערה במקום שהן היו ריכות להיות רעיונית
אין בעיות קומפילציה!!!
לא עובר טסטים

שאלה 3.3B:מתקמפל ללא הטעויות יש משתנה מיותר ויש הערה של UNUSED !! עובר טסטים!

שאלה 4:מתקמפל ללא הטעויות!! עובר טסטים!

שאלה 5:DLLRemove מתקמפל ללא הטעויות- אם משנים את השם FREE ל-FREE1 ניסיון לשם אינפורמטיב , לא בודקת אם הרשימה ריקה !! 
מעבר לכך אין טעויות קומפילציה
./dll.c: In function ‘DLLRemove’:
./dll.c:234:2: error: called object ‘free’ is not a function or function pointer
  234 |  free(free/*1*/);
      |  ^~~~


שאלה 5: DLLInsert מתקמפל ללא הערותת עובד טסטים !

שאלה 6: FindMissingNum מתקמפל ללא הערות ועובר טסטים


שאלה 8: PushChar לא מתקמפל, לא ניסית אבל רואה שיש בעיה משמעותית כי משתמשת באלמנט של cq_t ללא לעשות <- ולכן לא יעבוד מעבר לכך חסר cast במעבר בין כתובות לsize_t והייתי צריכה להשתמש בגודך ולא בכתובת.
test.c:22:16: error: invalid operands to binary - (have ‘size_t’ {aka ‘long unsigned int’} and ‘cq_t *’ {aka ‘struct circular_queue *’})
   22 |  if (que->read - /*(size_t)*/que < Q_SIZE)
      |      ~~~~~~~~~ ^
      |         |
      |         size_t {aka long unsigned int}
test.c:24:23: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
   24 |   que->queue[/*que->*/read - que->size] = c;
      |                       ^~~~
לאחר התיקונים באלו עובד ומגדיל את הsize
בניתי גם POP כדי לבדוק את הPUSH
